--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "hackernews-ui",
-  "version": "1.0.0",
-  "description": "An interface for Hackernews which aims to make it easier to read and write comments",
+  "version": "0.0.0",
+  "description": "A Vue.js interface for Hackernews which aims to make it easier to read and write comments",
   "author": "Fausto Núñez Alberro <fausto.nunez@mailbox.org>",
-  "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
@@ -18,6 +17,7 @@
     "vue-moment": "^2.0.2",
     "vue-router": "^2.7.0"
   },
+  "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
@@ -30,7 +30,6 @@
     "babel-register": "^6.22.0",
     "chai": "^3.5.0",
     "chalk": "^2.0.1",
-    "chromedriver": "^2.27.2",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.1",
@@ -62,13 +61,11 @@
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
-    "nightwatch": "^0.9.12",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.14",
     "rimraf": "^2.6.0",
-    "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "sinon": "^2.1.0",
