--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "node-sass": "^4.0.0",
+    "sass-loader": "^6.0.6",
     "vue": "^2.4.2",
     "vue-moment": "^2.0.2",
     "vue-router": "^2.7.0"
