➕ Add redux, revue and redux-saga deps

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "axios": "^0.16.2",
     "node-sass": "^4.0.0",
     "normalize.css": "^7.0.0",
+    "redux": "^3.7.2",
+    "redux-saga": "^0.15.6",
+    "revue": "^3.0.0",
     "sass-loader": "^6.0.6",
     "vue": "^2.4.2",
     "vue-moment": "^2.0.2",
