--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "firebase": "^4.3.1",
     "immutability-helper": "^2.3.1",
     "node-sass": "^4.0.0",
     "normalize.css": "^7.0.0",
